src/App.css
body {
  /* Firefox */
  scrollbar-width: none;
  height: 100%;
}
body::-webkit-scrollbar {
  display: none;
}

.ui.container {
  height: 100%;
  position: relative;
}

h1, h2 {
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}


.App {
  text-align: center;
}

.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 10vmin;
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

.close{
  position: absolute;
  top: 0px;
  right: -4px;
  cursor: pointer;
  color:  rgba(34,36,38,.15);
}
.close:hover {
  color: black;
}

/* footer {
  position: fixed;
  bottom: 0;
  font-size: 10px;
  width: 100%;
  background-color: white;
  height: 40px;
  line-height: 40px;
} */


/* material-ui classes */

.App .ui.segments {
  border: none;
  box-shadow: none;
  margin-top: 40px;
}

.App .ui.segment {
  border: none;
  box-shadow: none;
  border-radius: 0;
}

.App .ui.form {
  max-width: 480px;
  margin: 0 auto;
}

.App .ui.form input {
  border: none;
  border-bottom: 1px solid rgba(34,36,38,.15);
  border-radius: 0;
  font-size: 24px;
}

.App .ui.form input:focus {
  border-radius: 0;
}

.App .check.icon.green {
  font-size: 24px;
}

.App .ui.segment.Card {
  box-shadow: 0 1px 2px 0 rgba(34,36,38,.15);
  margin: 1rem 0;
  padding: 1em 1em;
  border-radius: .28571429rem;
  border: 1px solid rgba(34,36,38,.15);
  min-height: 300px;
}





/* Helper Classes */
.block{
  display: block;
}

.inline-block{
  display: inline-block;
  width: 50%;
  margin: 0 auto;
}

.hide-page{
  display: none;
}
.green{
  color: green;
}

.left-align{
  text-align: left;
}

.right-align {
  text-align: right;
}
.no-margin-top{
  margin-top: 0;
}
.margin-top{
  margin-top: 10px !important;
}
.margin-bottom{
  margin-bottom: 40px !important;
}
.red{
  color: red;
}
.pointer{
  cursor: pointer;
}

.relative {
  position: relative;
}

.no-border{
  border: none !important;
  box-shadow: none !important;
}


/* custom classes */
.react-icon {
  position: absolute;
  top: 0;
  right: -24px;
}

.react-icon img {
  height: 95px;
}

.site-title {
  width: 100%;
  margin-top: 30px !important;
}

.option-container {
  opacity: .6;
  cursor: pointer;
}

.option-container:hover{
  opacity: 1;
}



/* Quiz Component */
.quiz-container .score-container {
  display: inline-block;
}

.quiz-container .score-container .num-correct {
  color: green;
}

.quiz-container .score-container .num-wrong {
  color: red;
}

.quiz-container .quiz-text-container {
  padding-bottom: 80px;
}

.quiz-container .prompt {
  font-size: 16px;
  margin-bottom: 40px;
}

.quiz-container .question {
  font-size: 16px;
}

.quiz-container .word-answer{
  font-size: 24px;
}

.quiz-container .def-answer{
  text-align: left;
}

.quiz-container .def-question{
  text-align: left;
  font-size: 14px;
}

.quiz-container .word-question{
  font-size: 24px;
}


.quiz-container .quiz-button-container {
  margin-top: 40px;
  position: absolute;
  left: 0;
  width: 100%;
  bottom: 1em;
}


.quiz-container .ui.button.correct:hover {
  background-color: green;
  color: white;
}

.quiz-container .ui.button.wrong:hover {
  background-color: red;
  color: white;
}

.quiz-container .ui.button.correct {
  background-color: white;
  color: green;
  border: 1px solid green;
}

.quiz-container .ui.button.wrong {
  background-color: white;
  color: red;
  border: 1px solid red;
}


/* CSS Transitions */

.comp-appear {
  opacity: 0.01;
}
.comp-appear.comp-appear-active {
  opacity: 1;
  transition: opacity 1s ease-in;
}
.comp-enter {
  opacity: 0.01;
}
.comp-enter.comp-enter-active {
  opacity: 1;
  transition: opacity 500ms ease-in;
}
.comp-leave {
  opacity: 1;
}
.comp-leave.comp-leave-active {
  opacity: 0.01;
  transition: opacity 500ms ease-in;
}

.word-enter {
  opacity: 0.01;
}
.word-enter.word-enter-active {
  opacity: 1;
  transition: opacity 1000ms ease-in;
}
.word-leave {
  opacity: 1;
}
.word-leave.word-leave-active {
  opacity: 0.01;
  transition: opacity 1000ms ease-in;
}


.bounce-element {
  align-self: flex-end;
  animation-duration: 2s;
  animation-iteration-count: infinite;
  color: #F44336 !important;
  height: 40px;
  margin: 0 auto 0 auto;
  transform-origin: bottom;
  width: 200px;
}
.bounce {
  animation-name: bounce;
  animation-timing-function: cubic-bezier(0.280, 0.840, 0.420, 1);
}
@keyframes bounce {
  0%   { transform: scale(1,1)      translateY(0); }
  10%  { transform: scale(1.1,.9)   translateY(0); }
  30%  { transform: scale(.9,1.1)   translateY(-20px); }
  50%  { transform: scale(1.05,.95) translateY(0); }
  /* 10%  { transform: scale(1,1)   translateY(0); }
  30%  { transform: scale(1,1)   translateY(-20px); }
  50%  { transform: scale(1,1) translateY(0); } */
  57%  { transform: scale(1,1)      translateY(-7px); }
  64%  { transform: scale(1,1)      translateY(0); }
  100% { transform: scale(1,1)      translateY(0); }
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}



/* Media queries */
@media screen and (max-width: 768px) {
  .end-quiz-button {
    position: absolute;
    bottom: -80px;
    right: 0;
  }

  .quiz-container .ui.button.correct:hover {
    background-color: unset;
    color: green;
  }
  
  .quiz-container .ui.button.wrong:hover {
    background-color: unset;
    color: red;
  }
}

